tests/ui/lint/snapshots/uninterpolated_fstring.snap
---
source: tests/ui/lint/mod.rs
---
  ● Uninterpolated f-string
   ╭─[test.lis:3:13]
 2 │ fn main() {
 3 │   let msg = f"hello world";
   ·             ───────┬──────
   ·                    ╰── zero interpolations
 4 │   let _ = msg
   ╰────
  help: Remove the `f` prefix. A string without interpolations does not need to be a format string · code: [lint.uninterpolated_fstring]
