tests/ui/lint/snapshots/unknown_attribute.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Unknown attribute
   ╭─[test.lis:2:1]
 1 │ 
 2 │ #[foo]
   · ───┬──
   ·    ╰── not recognized
 3 │ pub struct User {
   ╰────
  help: `foo` is not a recognized attribute. Known attributes: `#[json]`, `#[xml]`, `#[yaml]`, `#[toml]`, `#[db]`, `#[bson]`, `#[mapstructure]`, `#[msgpack]`, `#[tag]`, `#[allow]`, `#[iterate]`, `#[display]`, `#[equality]`, `#[test]`, `#[default]` · code: [lint.unknown_attribute]
