tests/ui/lint/snapshots/unknown_tag_option_warns.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Unknown tag option
   ╭─[test.lis:4:3]
 3 │ pub struct User {
 4 │   #[json(unknown_flag)]
   ·   ──────────┬──────────
   ·             ╰── not recognized
 5 │   name: string,
   ╰────
  help: `unknown_flag` is not a recognized tag option. Known options: `snake_case`, `camel_case`, `omitempty`, `!omitempty`, `omitzero`, `!omitzero`, `skip`, `string` · code: [lint.unknown_tag_option]
