tests/ui/lint/snapshots/unnecessary_first_then_check_is_some.snap
---
source: tests/ui/lint/mod.rs
---
  [info] First-element check can use `is_empty()`
   ╭─[test.lis:4:11]
 3 │   let xs = [1, 2, 3, 4]
 4 │   let _ = xs.get(0).is_some()
   ·           ─────────┬─────────
   ·                    ╰── can be simpler
 5 │ }
   ╰────
  help: Simplify to `!xs.is_empty()` · code: [lint.unnecessary_first_then_check]
