tests/ui/lint/snapshots/unnecessary_lazy_evaluations_map_or_else.snap
---
source: tests/ui/lint/mod.rs
---
  ● Unnecessary lazy evaluation
   ╭─[test.lis:4:25]
 3 │   let o: Option<int> = Some(1)
 4 │   let _ = o.map_or_else(|| 0, |x| x + 1)
   ·                         ──┬─
   ·                           ╰── can be simpler
 5 │ }
   ╰────
  help: Replace `.map_or_else(...)` with `.map_or(...)` to pass the value directly · code: [lint.unnecessary_lazy_evaluations]
