tests/ui/lint/snapshots/unnecessary_lazy_evaluations_unwrap_or_else.snap
---
source: tests/ui/lint/mod.rs
---
  [info] Unnecessary lazy evaluation
   ╭─[test.lis:4:28]
 3 │   let o: Option<int> = Some(1)
 4 │   let _ = o.unwrap_or_else(|| 0)
   ·                            ──┬─
   ·                              ╰── can be simpler
 5 │ }
   ╰────
  help: Replace `.unwrap_or_else(...)` with `.unwrap_or(...)` to pass the value directly · code: [lint.unnecessary_lazy_evaluations]
